--- a/src/qt/forms/bip38tooldialog.ui
+++ b/src/qt/forms/bip38tooldialog.ui
@@ -60,7 +60,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="addressBookButton_ENC">
+          <widget class="QtMaterialFlatButton" name="addressBookButton_ENC">
            <property name="toolTip">
             <string>Choose previously used address</string>
            </property>
@@ -80,7 +80,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="pasteButton_ENC">
+          <widget class="QtMaterialFlatButton" name="pasteButton_ENC">
            <property name="toolTip">
             <string>Paste address from clipboard</string>
            </property>
@@ -147,7 +147,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="copyKeyButton_ENC">
+          <widget class="QtMaterialFlatButton" name="copyKeyButton_ENC">
            <property name="toolTip">
             <string>Copy the current signature to the system clipboard</string>
            </property>
@@ -168,7 +168,7 @@
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_3_ENC">
          <item>
-          <widget class="QPushButton" name="encryptKeyButton_ENC">
+          <widget class="QtMaterialFlatButton" name="encryptKeyButton_ENC">
            <property name="toolTip">
             <string>Sign the message to prove you own this Bulwark address</string>
            </property>
@@ -185,7 +185,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="clearButton_ENC">
+          <widget class="QtMaterialFlatButton" name="clearButton_ENC">
            <property name="toolTip">
             <string>Reset all sign message fields</string>
            </property>
@@ -307,7 +307,7 @@
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_2_DEC">
          <item>
-          <widget class="QPushButton" name="decryptKeyButton_DEC">
+          <widget class="QtMaterialFlatButton" name="decryptKeyButton_DEC">
            <property name="toolTip">
             <string>Verify the message to ensure it was signed with the specified Bulwark address</string>
            </property>
@@ -324,7 +324,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="clearButton_DEC">
+          <widget class="QtMaterialFlatButton" name="clearButton_DEC">
            <property name="toolTip">
             <string>Reset all verify message fields</string>
            </property>
@@ -401,7 +401,7 @@
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_4">
          <item>
-          <widget class="QPushButton" name="importAddressButton_DEC">
+          <widget class="QtMaterialFlatButton" name="importAddressButton_DEC">
            <property name="text">
             <string>Import Address</string>
            </property>
