--- a/src/qt/forms/masternodelist.ui
+++ b/src/qt/forms/masternodelist.ui
@@ -160,28 +160,28 @@
             <number>0</number>
            </property>
            <item>
-            <widget class="QPushButton" name="startButton">
+            <widget class="QtMaterialFlatButton" name="startButton">
              <property name="text">
               <string>S&amp;tart alias</string>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QPushButton" name="startAllButton">
+            <widget class="QtMaterialFlatButton" name="startAllButton">
              <property name="text">
               <string>Start &amp;all</string>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QPushButton" name="startMissingButton">
+            <widget class="QtMaterialFlatButton" name="startMissingButton">
              <property name="text">
               <string>Start &amp;MISSING</string>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QPushButton" name="UpdateButton">
+            <widget class="QtMaterialFlatButton" name="UpdateButton">
              <property name="text">
               <string>&amp;Update status</string>
              </property>
