--- a/src/qt/forms/overviewpage.ui
+++ b/src/qt/forms/overviewpage.ui
@@ -628,7 +628,7 @@
            </item>
           </layout>
          </widget>
-         <widget class="QPushButton" name="runAutoDenom">
+         <widget class="QtMaterialFlatButton" name="runAutoDenom">
           <property name="geometry">
            <rect>
             <x>251</x>
@@ -1065,7 +1065,7 @@
            <bool>true</bool>
           </property>
          </widget>
-         <widget class="QPushButton" name="toggleObfuscation">
+         <widget class="QtMaterialFlatButton" name="toggleObfuscation">
           <property name="geometry">
            <rect>
             <x>10</x>
@@ -1128,7 +1128,7 @@
            <bool>true</bool>
           </property>
          </widget>
-         <widget class="QPushButton" name="obfuscationAuto">
+         <widget class="QtMaterialFlatButton" name="obfuscationAuto">
           <property name="geometry">
            <rect>
             <x>10</x>
@@ -1150,7 +1150,7 @@
            <string>Try Mix</string>
           </property>
          </widget>
-         <widget class="QPushButton" name="obfuscationReset">
+         <widget class="QtMaterialFlatButton" name="obfuscationReset">
           <property name="geometry">
            <rect>
             <x>230</x>
@@ -1194,7 +1194,7 @@
            <string>Status Messages</string>
           </property>
          </widget>
-         <widget class="QPushButton" name="toggleStaking">
+         <widget class="QtMaterialFlatButton" name="toggleStaking">
           <property name="geometry">
            <rect>
             <x>230</x>
