--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -158,7 +158,7 @@ QTextEdit:disabled {
 QPlainTextEdit {
 	background-color: #f2f2f2
 }
-QPushButton {
+QtMaterialFlatButton {
 	background-color: transparent;
 	border-width: 1px;
 	border-style: solid;
@@ -174,10 +174,10 @@ QPushButton {
 	height: 26px;
 	margin: 2px
 }
-QPushButton:hover {
+QtMaterialFlatButton:hover {
 	background-color: #e4e4e4
 }
-QPushButton:focus {} QPushButton:pressed {
+QtMaterialFlatButton:focus {} QtMaterialFlatButton:pressed {
 	background-color: #1565c0;
 	border: 1px solid #000000;
 	background-color: #5e92f3
@@ -185,7 +185,7 @@ QPushButton:focus {} QPushButton:pressed {
 QLabel#labelEncryptionIcon,
 QLabel#labelConnectionsIcon,
 QLabel#labelBlocksIcon,
-QPushButton#labelAutoMintIcon{
+QtMaterialFlatButton#labelAutoMintIcon{
 	border: 0px;
 	padding-left: 0px;
 	padding-right: 0px;
@@ -451,18 +451,18 @@ QDialog .QTabWidget .QWidget QComboBox {
 QDialog#OpenURIDialog QLabel#label {
 	font-weight: 700
 }
-QDialog#OpenURIDialog QPushButton#selectFileButton {
+QDialog#OpenURIDialog QtMaterialFlatButton#selectFileButton {
 	background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #f6f6f6, stop: .1 rgba(250, 250, 250, 128), stop: .95 rgba(250, 250, 250, 255), stop: 1 #ebebeb);
 	border: 1px solid #d2d2d2;
 	color: #616161;
 	padding-left: 10px;
 	padding-right: 10px
 }
-QDialog#OpenURIDialog QPushButton#selectFileButton:hover {
+QDialog#OpenURIDialog QtMaterialFlatButton#selectFileButton:hover {
 	background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: .01 #f6f6f6, stop: .1 rgba(240, 240, 240, 255), stop: .95 rgba(240, 240, 240, 255), stop: 1 #ebebeb);
 	color: #333
 }
-QDialog#OpenURIDialog QPushButton#selectFileButton:pressed {
+QDialog#OpenURIDialog QtMaterialFlatButton#selectFileButton:pressed {
 	border: 1px solid #9e9e9e
 }
 QWidget#AddressBookPage {
@@ -481,7 +481,7 @@ QFrame#frameObfuscation {
 QFrame#frameObfuscation QFormLayout#obfuscationStatusLayout QLabel {
 	border: 0px solid #000
 }
-QFrame#frameObfuscation QPushButton {
+QFrame#frameObfuscation QtMaterialFlatButton {
 	font-size: 12px;
 	font-weight: 400;
 	padding-left: 5px;
@@ -561,7 +561,7 @@ QDialog#RPCConsole QWidget#tab_peers QLabel#peerHeading {
 QDialog#RPCConsole QTableView#peerWidget::item {
 	color: #333
 }
-QDialog#RPCConsole QPushButton#openDebugLogfileButton {
+QDialog#RPCConsole QtMaterialFlatButton#openDebugLogfileButton {
 	max-width: 60px
 }
 QDialog#RPCConsole QTextEdit#messagesWidget {
@@ -572,7 +572,7 @@ QDialog#RPCConsole QTextEdit#messagesWidget {
 QDialog#RPCConsole QLineEdit#lineEdit {
 	margin-right: 5px
 }
-QDialog#RPCConsole QPushButton#clearButton {
+QDialog#RPCConsole QtMaterialFlatButton#clearButton {
 	background-color: transparent;
 	padding-left: 10px;
 	padding-right: 10px
@@ -781,7 +781,7 @@ QDialog#SendCoinsDialog .QFrame#frameCoinControl {
 QDialog#SendCoinsDialog .QFrame#frameCoinControl > .QLabel {
 	font-weight: 400
 }
-QDialog#SendCoinsDialog .QFrame#frameCoinControl .QPushButton#pushButtonCoinControl {
+QDialog#SendCoinsDialog .QFrame#frameCoinControl .QtMaterialFlatButton#pushButtonCoinControl {
 	padding-left: 10px;
 	padding-right: 10px;
 	min-height: 25px
@@ -885,17 +885,17 @@ QDialog#CoinControlDialog .QLabel#labelCoinControlAfterFee {
 QDialog#CoinControlDialog .QLabel#labelCoinControlChangeText {
 	padding-left: 15px
 }
-QDialog#CoinControlDialog .QLabel#labelCoinControlChange {} QDialog#CoinControlDialog .QFrame#frame .QPushButton#pushButtonSelectAll {
+QDialog#CoinControlDialog .QLabel#labelCoinControlChange {} QDialog#CoinControlDialog .QFrame#frame .QtMaterialFlatButton#pushButtonSelectAll {
 	padding-left: 10px;
 	padding-right: 10px;
 	min-height: 25px
 }
-QDialog#CoinControlDialog .QFrame#frame .QPushButton#pushButtonToggleLock {
+QDialog#CoinControlDialog .QFrame#frame .QtMaterialFlatButton#pushButtonToggleLock {
 	padding-left: 10px;
 	padding-right: 10px;
 	min-height: 25px
 }
-QDialog#CoinControlDialog .QDialogButtonBox#buttonBox QPushButton {} QDialog#CoinControlDialog .QFrame#frame .QRadioButton#radioTreeMode {
+QDialog#CoinControlDialog .QDialogButtonBox#buttonBox QtMaterialFlatButton {} QDialog#CoinControlDialog .QFrame#frame .QRadioButton#radioTreeMode {
 	color: #818181;
 	background-color: transparent
 }
@@ -949,7 +949,7 @@ QWidget#ReceiveCoinsDialog .QFrame#frame2 > .QLabel {
 	margin-right: 5px;
 	padding-right: 5px
 }
-QWidget#ReceiveCoinsDialog .QFrame#frame QPushButton {
+QWidget#ReceiveCoinsDialog .QFrame#frame QtMaterialFlatButton {
 	background-color: transparent;
 	border-width: 1px;
 	border-style: solid;
@@ -959,14 +959,14 @@ QWidget#ReceiveCoinsDialog .QFrame#frame QPushButton {
 	padding-left: 10px;
 	padding-right: 10px
 }
-QWidget#ReceiveCoinsDialog .QFrame#frame QPushButton:pressed {
+QWidget#ReceiveCoinsDialog .QFrame#frame QtMaterialFlatButton:pressed {
 	border: 1px solid #9e9e9e
 }
-QWidget#ReceiveCoinsDialog .QFrame#frame2 QPushButton {
+QWidget#ReceiveCoinsDialog .QFrame#frame2 QtMaterialFlatButton {
 	padding-left: 10px;
 	padding-right: 10px
 }
-QWidget#ReceiveCoinsDialog .QFrame#frame2 QPushButton:pressed {
+QWidget#ReceiveCoinsDialog .QFrame#frame2 QtMaterialFlatButton:pressed {
 	border: 1px solid #9e9e9e
 }
 QWidget#ReceiveCoinsDialog .QFrame#frame .QLabel#label_6 {
