--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -31,7 +31,7 @@ QMenu::item:selected {
 	color: #333
 }
 QToolBar {
-	background-color: #1565c0;
+	background-color: #0091ea;
 	border: 0px solid #333;
 	padding: 1;
 	margin: 0;
@@ -39,7 +39,7 @@ QToolBar {
 }
 QToolBar > QToolButton {
 	alignment: left;
-	background-color: #1565c0;
+	background-color: #0091ea;
 	border: 0px solid #333;
 	border-left: 0px;
 	border-right: 0px;
@@ -78,7 +78,7 @@ QProgressBar {
 	padding-right: 0px
 }
 QProgressBar::chunk {
-	background-color: #1565c0;
+	background-color: #0091ea;
 	width: 20px
 }
 QLabel#progressBarLabel {
@@ -102,7 +102,7 @@ QTabBar::tab:hover:!selected {
 	background-color: #5e92f3
 }
 QWidget {
-	selection-background-color: #1565c0;
+	selection-background-color: #0091ea;
 	selection-color: #fff;
 	outline: 0;
 }
@@ -138,21 +138,21 @@ QTextEdit {
 	background-color: #f2f2f2
 }
 QValidatedLineEdit:!focus {
-	color: #1565c0;
+	color: #0091ea;
 	background-color: #e7e7e7
 }
 QLineEdit:!focus {
-	color: #1565c0;
+	color: #0091ea;
 	background-color: #e7e7e7
 }
 QTextEdit:!focus {
-	color: #1565c0;
+	color: #0091ea;
 	background-color: #e7e7e7
 }
 QValidatedLineEdit:disabled,
 QLineEdit:disabled,
 QTextEdit:disabled {
-	color: #1565c0;
+	color: #0091ea;
 	background-color: #f2f2f2
 }
 QPlainTextEdit {
@@ -162,9 +162,9 @@ QtMaterialFlatButton {
 	background-color: transparent;
 	border-width: 1px;
 	border-style: solid;
-	border-color: #1565c0;
+	border-color: #0091ea;
 	border-radius: 4px;
-	color: #1565c0;
+	color: #0091ea;
 	font-size: 12px;
 	font-weight: 700;
 	padding-left: 25px;
@@ -178,7 +178,7 @@ QtMaterialFlatButton:hover {
 	background-color: #e4e4e4
 }
 QtMaterialFlatButton:focus {} QtMaterialFlatButton:pressed {
-	background-color: #1565c0;
+	background-color: #0091ea;
 	border: 1px solid #000000;
 	background-color: #5e92f3
 }
@@ -200,7 +200,7 @@ QSpinBox::down-button:hover {
 	background-color: #5e92f3
 }
 QComboBox {
-	border: 1px solid #1565c0;
+	border: 1px solid #0091ea;
 	border-radius: 10px;
 	padding: 3px 5px 3px 5px;
 	background: #fcfcfc;
@@ -211,7 +211,7 @@ QComboBox:checked {
 	background: #f2f2f2
 }
 QComboBox:editable {
-	background: #1565c0;
+	background: #0091ea;
 	color: #616161;
 	border: 0px solid transparent
 }
@@ -261,7 +261,7 @@ QAbstractSpinBox {
 	background-color: #f2f2f2
 }
 QAbstractSpinBox:!focus {
-	color: #1565c0;
+	color: #0091ea;
 	background-color: #e7e7e7
 }
 QAbstractSpinBox::up-button {
@@ -301,7 +301,7 @@ QValueComboBox {
 	background-color: #f2f2f2
 }
 QValueComboBox:!focus {
-	color: #1565c0;
+	color: #0091ea;
 	background-color: #e7e7e7
 }
 QHeaderView {
@@ -310,7 +310,7 @@ QHeaderView {
 }
 QHeaderView::section {
 	qproperty-alignment: center;
-	background-color: #1565c0;
+	background-color: #0091ea;
 	color: #fff;
 	min-height: 25px;
 	font-weight: 700;
@@ -348,7 +348,7 @@ QTableView::item {
 	font-size: 12px
 }
 QTableView::item:selected {
-	background-color: #1565c0;
+	background-color: #0091ea;
 	color: #fff
 }
 QTableWidget {
@@ -499,7 +499,7 @@ QFrame#frameObfuscation QProgressBar#obfuscationProgress {
 	padding-right: 0px
 }
 QFrame#frameObfuscation QProgressBar#obfuscationProgress::chunk {
-	background-color: #1565c0;
+	background-color: #0091ea;
 	width: 1px
 }
 QFrame#frameObfuscation QLabel#progressBarLabel {
@@ -556,7 +556,7 @@ QDialog#RPCConsole QWidget#tab_info QLabel#label_10 {
 	min-width: 180px
 }
 QDialog#RPCConsole QWidget#tab_peers QLabel#peerHeading {
-	color: #1565c0
+	color: #0091ea
 }
 QDialog#RPCConsole QTableView#peerWidget::item {
 	color: #333
@@ -578,7 +578,7 @@ QDialog#RPCConsole QtMaterialFlatButton#clearButton {
 	padding-right: 10px
 }
 QDialog#RPCConsole .QGroupBox #line {
-	background-color: #1565c0
+	background-color: #0091ea
 }
 QDialog#RPCConsole .QGroupBox #line_2 {
 	background: #fff
@@ -601,7 +601,7 @@ QDialog#EditAddressDialog QLabel {
 	padding-right: 5px
 }
 QFrame[frameShape="4"] {
-	border: 1px solid #1565c0
+	border: 1px solid #0091ea
 }
 QLabel#labelOverviewHeaderLeft {
 	font-weight: 700;
@@ -713,7 +713,7 @@ QWidget .QFrame#frame_CombinedBalances .QLabel#BalanceTitlez {
 	min-width: 160px;
 	background-color: transparent;
 	text-transform: uppercase;
-	color: #1565c0;
+	color: #0091ea;
 	font-weight: 700;
 	font-size: 12px;
 }
@@ -912,7 +912,7 @@ QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget {
 	border: 1px solid #333
 }
 QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::item {} QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::item:selected {
-	background-color: #1565c0;
+	background-color: #0091ea;
 	color: #fff
 }
 QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::item:checked {
@@ -953,9 +953,9 @@ QWidget#ReceiveCoinsDialog .QFrame#frame QtMaterialFlatButton {
 	background-color: transparent;
 	border-width: 1px;
 	border-style: solid;
-	border-color: #1565c0;
+	border-color: #0091ea;
 	border-radius: 4px;
-	color: #1565c0;
+	color: #0091ea;
 	padding-left: 10px;
 	padding-right: 10px
 }
@@ -970,7 +970,7 @@ QWidget#ReceiveCoinsDialog .QFrame#frame2 QtMaterialFlatButton:pressed {
 	border: 1px solid #9e9e9e
 }
 QWidget#ReceiveCoinsDialog .QFrame#frame .QLabel#label_6 {
-	color: #1565c0;
+	color: #0091ea;
 	font-weight: 700;
 	font-size: 14px
 }
@@ -1022,7 +1022,7 @@ QCalendarView {
 	border: 1px solid #333
 }
 QCalendarWidget QWidget#qt_calendar_navigationbar {
-	background-color: #1565c0;
+	background-color: #0091ea;
 	font-weight: 700
 }
 QCalendarWidget QAbstractItemView {
