--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -31,6 +31,7 @@ QMenu::item:selected {
 	color: #333
 }
 QToolBar {
+	QFont font("Roboto", fontSize, QFont::Medium);
 	background-color: #0091ea;
 	border: 0px solid #333;
 	padding: 1;
