have a go at it lad

--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -31,7 +31,8 @@ QMenu::item:selected {
 	color: #333
 }
 QToolBar {
-	QFont font("Roboto", fontSize, QFont::Medium);
+	font-family: "Roboto";
+	QFont::Medium;
 	background-color: #0091ea;
 	border: 0px solid #333;
 	padding: 1;
