--- a/src/qt/forms/blockexplorer.ui
+++ b/src/qt/forms/blockexplorer.ui
@@ -21,12 +21,12 @@
        <enum>QLayout::SetMinimumSize</enum>
       </property>
       <item>
-       <widget class="QPushButton" name="back">
+       <widget class="QtMaterialFlatButton" name="back">
         <property name="text">
          <string/>
         </property>
         <property name="icon">
-         <iconset>
+         <iconset resource="../bitcoin.qrc">
           <normaloff>:/icons/back</normaloff>:/icons/back</iconset>
         </property>
         <property name="flat">
@@ -35,12 +35,12 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="forward">
+       <widget class="QtMaterialFlatButton" name="forward">
         <property name="text">
          <string/>
         </property>
         <property name="icon">
-         <iconset>
+         <iconset resource="../bitcoin.qrc">
           <normaloff>:/icons/forward</normaloff>:/icons/forward</iconset>
         </property>
        </widget>
@@ -71,7 +71,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pushSearch">
+       <widget class="QtMaterialFlatButton" name="pushSearch">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
           <horstretch>0</horstretch>
@@ -117,7 +117,7 @@
          <x>0</x>
          <y>0</y>
          <width>780</width>
-         <height>507</height>
+         <height>498</height>
         </rect>
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -155,14 +155,14 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>21</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources>
-  <include location="../bulwark.qrc"/>
+  <include location="../bitcoin.qrc"/>
  </resources>
  <connections/>
 </ui>
