--- a/src/qt/forms/openuridialog.ui
+++ b/src/qt/forms/openuridialog.ui
@@ -18,7 +18,7 @@
     <rect>
      <x>9</x>
      <y>9</y>
-     <width>187</width>
+     <width>241</width>
      <height>16</height>
     </rect>
    </property>
@@ -26,13 +26,60 @@
     <string>Open payment request from URI or file</string>
    </property>
   </widget>
+  <widget class="QWidget" name="layoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>40</y>
+     <width>461</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
+     <widget class="QLabel" name="label">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="text">
+       <string>URI:</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QValidatedLineEdit" name="uriEdit"/>
+    </item>
+    <item>
+     <widget class="QtMaterialFlatButton" name="selectFileButton" native="true">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="toolTip">
+       <string>Select payment request file</string>
+      </property>
+      <property name="text" stdset="0">
+       <string notr="true">...</string>
+      </property>
+      <property name="autoDefault" stdset="0">
+       <bool>false</bool>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
   <widget class="QWidget" name="horizontalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>9</x>
-     <y>80</y>
+     <x>10</x>
+     <y>100</y>
      <width>461</width>
-     <height>51</height>
+     <height>29</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -50,25 +97,9 @@
      </spacer>
     </item>
     <item>
-     <widget class="QtMaterialFlatButton" name="cancelButton" native="true">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="toolTip">
-       <string>Try to manually submit a Obfuscation request.</string>
-      </property>
-      <property name="text" stdset="0">
-       <string>Try Mix</string>
-      </property>
-     </widget>
-    </item>
-    <item>
      <widget class="QtMaterialFlatButton" name="acceptButton" native="true">
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+       <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
@@ -77,42 +108,23 @@
        <string>Try to manually submit a Obfuscation request.</string>
       </property>
       <property name="text" stdset="0">
-       <string>Try Mix</string>
-      </property>
-     </widget>
-    </item>
-   </layout>
-  </widget>
-  <widget class="QWidget" name="">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>40</y>
-     <width>461</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <layout class="QHBoxLayout" name="horizontalLayout">
-    <item>
-     <widget class="QLabel" name="label">
-      <property name="text">
-       <string>URI:</string>
+       <string>OK</string>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QValidatedLineEdit" name="uriEdit"/>
-    </item>
-    <item>
-     <widget class="QtMaterialFlatButton" name="selectFileButton" native="true">
+     <widget class="QtMaterialFlatButton" name="cancelButton" native="true">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="toolTip">
-       <string>Select payment request file</string>
+       <string>Try to manually submit a Obfuscation request.</string>
       </property>
       <property name="text" stdset="0">
-       <string notr="true">...</string>
-      </property>
-      <property name="autoDefault" stdset="0">
-       <bool>false</bool>
+       <string>Cancel</string>
       </property>
      </widget>
     </item>
