--- a/src/qt/forms/multisenddialog.ui
+++ b/src/qt/forms/multisenddialog.ui
@@ -87,21 +87,21 @@
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_3">
     <item>
-     <widget class="QtMaterialFlatButton" name="activateButton">
-      <property name="text">
+     <widget class="QtMaterialFlatButton" name="activateButton" native="true">
+      <property name="text" stdset="0">
        <string>Activate</string>
       </property>
-      <property name="autoDefault">
+      <property name="autoDefault" stdset="0">
        <bool>false</bool>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QtMaterialFlatButton" name="disableButton">
-      <property name="text">
+     <widget class="QtMaterialFlatButton" name="disableButton" native="true">
+      <property name="text" stdset="0">
        <string>Disable</string>
       </property>
-      <property name="autoDefault">
+      <property name="autoDefault" stdset="0">
        <bool>false</bool>
       </property>
      </widget>
@@ -215,7 +215,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QtMaterialFlatButton" name="addressBookButton">
+       <widget class="QtMaterialIconButton" name="addressBookButton" native="true">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
           <horstretch>0</horstretch>
@@ -231,14 +231,14 @@
         <property name="toolTip">
          <string>Choose an address from the address book</string>
         </property>
-        <property name="text">
+        <property name="text" stdset="0">
          <string/>
         </property>
-        <property name="icon">
+        <property name="icon" stdset="0">
          <iconset resource="../bulwark.qrc">
           <normaloff>:/icons/address-book</normaloff>:/icons/address-book</iconset>
         </property>
-        <property name="autoDefault">
+        <property name="autoDefault" stdset="0">
          <bool>false</bool>
         </property>
        </widget>
@@ -324,6 +324,19 @@
    </layout>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QtMaterialFlatButton</class>
+   <extends>QWidget</extends>
+   <header>qtmaterialflatbutton.h</header>
+  </customwidget>
+  <customwidget>
+   <class>QtMaterialIconButton</class>
+   <extends>QWidget</extends>
+   <header>qtmaterialiconbutton.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources>
   <include location="../bulwark.qrc"/>
  </resources>
