--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -918,18 +918,24 @@ QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::item:checked {
 	color: #fff
 }
 QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::branch:selected {
-	background-image: url(':/images/downArrow_small');
 	background-repeat: no-repeat;
 	background-position: center;
 	background-color: #f7f7f7;
 	color: #333
 }
 QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::branch:checked {
-	background-image: url(':/images/downArrow_small');
 	background-repeat: no-repeat;
 	background-position: center;
 	background-color: #f7f7f7;
 	color: #333
+}
+QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::branch:closed:has-children:has-siblings {
+border-image: none;
+image: url(':/images/downArrow_small');
+}
+QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::branch:closed:has-children:has-siblings {
+border-image: none;
+image: url(':/images/rightArrow_small');
 }
 QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::seperator {} QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::indicator {} QWidget#ReceiveCoinsDialog {
 	background-color: #fff
