--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -347,6 +347,7 @@ QTableView::item {
 }
 QTableView::item:selected {
 	background-color: #ddd;
+	color: ffff;
 }
 QTableWidget {
 	background-color: #fcfcfc;
@@ -910,6 +911,7 @@ QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget {
 }
 QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::item {} QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::item:selected {
 	background-color: #ddd;
+	color: ffff;
 }
 QDialog#CoinControlDialog .CoinControlTreeWidget#treeWidget::item:checked {
 	background-color: #f7f7f7;
